# Urban-Sound-Classifer

./: README.md  main.py  pyproject.toml  requirements.txt  test.ipynb
