[project]
name = "audio-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keras>=3.13.0",
    "librosa>=0.11.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "sequential>=1.0.0",
    "streamlit>=1.52.2",
    "tensorflow>=2.20.0",
    "xgboost>=3.1.2",
]
